# herdr-go

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  config.example.json  dev-deploy.sh  install.ps1  install.sh
.agents/skills/: .bee-render.json
.bee/: backlog.jsonl  config.json  decisions.jsonl  onboarding.json  review-candidates.jsonl
.bee/cells/: agent-card-legibility-1.json  agent-pane-orchestration-1.json  agent-pane-orchestration-10.json  agent-pane-orchestration-11.json  agent-pane-orchestration-12.json  agent-pane-orchestration-13.json  agent-pane-orchestration-14.json  agent-pane-orchestration-15.json  agent-pane-orchestration-16.json  agent-pane-orchestration-2.json  agent-pane-orchestration-23.json  agent-pane-orchestration-24.json  agent-pane-orchestration-25.json  agent-pane-orchestration-3.json  agent-pane-orchestration-4.json  agent-pane-orchestration-5.json  agent-pane-orchestration-6.json  agent-pane-orchestration-7.json  agent-pane-orchestration-8.json  agent-pane-orchestration-9.json  agent-presets-config-1.json  agent-presets-config-2.json  answer-keys-ux-1.json  binary-rename-herdr-go-1.json  bind-1.json  bookkeeping-flush-1.json  cf-access-jwt-auth-1.json  cf-access-jwt-auth-2.json  cf-access-jwt-auth-3.json  ci-1.json  ci-fmt-drift-fix-1.json  cleanup-agent-pane-orchestration-1.json  cleanup-help-fingerprint-repro-1.json  cleanup-legacy-herdr-gateway-config-1.json  clippy-io-other-error-fix-1.json  cross-platform-install-1.json  cross-platform-install-2.json  cross-platform-install-3.json  cross-platform-install-4.json  cross-platform-install-5.json  (+140 more)
.bee/lanes/: commit-rename-herdr-go-3.json  cross-platform-install.json  macos-installer-runtime-smoke-p1-fix.json  macos-installer-runtime-smoke.json  pane-agent-status-changed-live-probe.json  pbi-025-terminal-detail-url-3.json  pbi-025-vite-allowed-hosts-design-lap.json  pbi-027-visual-viewport-keyboard.json  readme-demo-bind-restore.json  readme-rewrite.json  windows-username-length-fix.json
.bee/logs/: dispatch.jsonl  hooks.jsonl  tools.jsonl
.bee/reviews/: review-cf-access-jwt-auth-20260722.json  review-create-flow-and-home-shell-20260721b.json  review-cross-platform-install-20260720.json  review-installer-smoke-and-live-probe-20260721.json  review-installer-smoke-and-live-probe-20260721b.json  review-new-changesets-20260719.json  review-pbi-025-terminal-detail-url-20260722.json  review-release-20260720.json  review-v0-1-1-rc.json  review-windows-support-current.json
.claude/: settings.json.bak
.claude/agents/: bee-extract.md  bee-gather.md  bee-review.md
.claude/skills/: .bee-render.json
.codex/: hooks.json  hooks.json.bak
.github/workflows/: ci.yml  release.yml
docs/: DISCOVERY.md  PRD.md  backlog.md  deployment.md  installation.md  usage.md
docs/advanced/: architecture.md  configuration.md  deployment.md  source-build.md  troubleshooting.md
docs/distillery/: comparison-matrix.md  porting-log.md  taxonomy.txt
docs/specs/: agent-orchestration.md  create-sheet.md  doctor.md  herdr-port.md  installation.md  login.md  reading-map.md  self-update.md  service-lifecycle.md  (+4 more)
packaging/: herdr-gateway-dev.service  herdr-gateway.service  herdr-go-dev.service  herdr-go.plist  herdr-go.service
scripts/: generate-checksums.sh  macos-install-smoke.sh  update-smoke.sh  windows-install-smoke.ps1  windows-runtime-smoke.ps1
src/: config.rs  doctor.rs  herdr.rs  lib.rs  main.rs  security.rs  store.rs  supervisor.rs  watcher.rs  web.rs
tests/: gateway_behavior_e2e.rs  observe_reply_e2e.rs  rename_contract.sh  tier2_relay_e2e.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+339 files in other folders)
