[package]
name = "herdctl"
version = "0.1.0"
edition = "2021"
description = "herdr-gateway: web-first remote gateway + supervisor for herdr"
license = "MIT"
default-run = "herdctl"

[[bin]]
name = "herdctl"
path = "src/main.rs"

[lib]
name = "herdctl"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
futures-util = "0.3"
rand = "0.8"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
